force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/NCMT_Core_Shell_Cost_Detail__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <label>Core Shell Cost Detail</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Core Shell Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core Shell Cost Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>