force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Applicable_Cost__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Cost__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Applicable Cost %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>