force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Core_Shell_Cost__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Core Shell Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>