force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Core_Shell_Cost_Adj__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Cost_Adj__c</fullName>
    <formula>( Core_Shell_Cost__c + ( Core_Shell_Cost__c *  Project_Cost_Summary__r.P100_Percentage__c)) *  Project_Cost_Summary__r.Project_Name__r.Core_Shell_Adjustment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Shell Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>