force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Core_Shell_Cost_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Cost_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Shell Cost Parameter</label>
    <referenceTo>NCMT_Core_Shell_Cost_Parameter__c</referenceTo>
    <relationshipLabel>Core Shell Cost Detail</relationshipLabel>
    <relationshipName>Core_Shell_Cost_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>