force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Core_Shell_Criterion__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Criterion__c</fullName>
    <formula>Core_Shell_Cost_Parameter__r.Cost_Sub_Type_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Shell Criterion</label>
    <type>Text</type>
</CustomField>