force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Cost_Premium_Mod_2__c.field-meta.xml
<CustomField>
    <fullName>Cost_Premium_Mod_2__c</fullName>
    <formula>if((Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00410&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00405&quot; || 
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00398&quot; || 
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00399&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00403&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00404&quot; || 
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00401&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC406&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00409&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00412&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00402&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00411&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00407&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00397&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00400&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC345&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC346&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC347&quot;  ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC348&quot;  ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC349&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC350&quot;  ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC351&quot;  ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC352&quot;  ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC353&quot;  ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC-00408&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c == &quot;CC354&quot;), TCO_Performance_Input__r.E9__c, 
if((Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c==&quot;CC269&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c==&quot;CC270&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c==&quot;CC271&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c==&quot;CC272&quot; ||
Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c==&quot;CC273&quot;), VALUE(TEXT(TCO_Performance_Input__r.X100_Electric__c)) *0.05, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Premium Mod - 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>