force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Cost_Rate_for_Space__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate_for_Space__c</fullName>
    <formula>Case(Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c,
&quot;CC-27143&quot;,  TCO_Project_Cost_Rate__r.General_Maintenance_Rate__c,
&quot;CC-27144&quot;,  TCO_Project_Cost_Rate__r.General_Maintenance_Rate__c,
&quot;CC-27145&quot;,  TCO_Project_Cost_Rate__r.General_Maintenance_Rate__c,
&quot;CC-27146&quot;,  TCO_Project_Cost_Rate__r.Janitorial_Rate__c ,
&quot;CC-27147&quot;,  0 ,
&quot;CC-27148&quot;,  TCO_Project_Cost_Rate__r.Janitorial_Rate__c ,
&quot;CC-27149&quot;,  TCO_Project_Cost_Rate__r.General_Maintenance_Rate__c,
&quot;CC-27150&quot;,  TCO_Project_Cost_Rate__r.General_Maintenance_Rate__c,
&quot;CC-27151&quot;,  TCO_Project_Cost_Rate__r.General_Maintenance_Rate__c,
&quot;CC-27152&quot;, 0,
&quot;CC-27155&quot;, 0,
&quot;CC-27156&quot;,  0,
&quot;CC-27162&quot;,  0,
&quot;CC-27172&quot;,  0,
TCO_Project_Cost_Rate__r.Skilled_Maintenance_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Rate for Space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>