force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost__c</fullName>
    <formula>TCO_Unit_Maintenance_Cost__c *( 1+ Maintenance_Cost_Modifier__c) *  Total_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>