force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Maintenance_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost_Type__c</fullName>
    <formula>Text(Core_Shell_Cost_Parameter__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Cost Type</label>
    <type>Text</type>
</CustomField>