force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Maintenance_Cost_WF__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost_WF__c</fullName>
    <label>Maintenance Cost WF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>