force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/NCMT_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_ID__c</fullName>
    <formula>Project_Cost_Summary__r.Project_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Project ID</label>
    <type>Text</type>
</CustomField>