force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/ParkingCost__c.field-meta.xml
<CustomField>
    <fullName>ParkingCost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Parking Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>