force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Project_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Summary__c</fullName>
    <label>Project Cost Summary</label>
    <referenceTo>NCMT_Project_Cost_Summary__c</referenceTo>
    <relationshipLabel>Core Shell Cost Detail</relationshipLabel>
    <relationshipName>Core_Shell_Cost_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>