force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Project_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Record_Type_Id__c</fullName>
    <formula>Project_Cost_Summary__r.Project_Name__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Record Type Id</label>
    <type>Text</type>
</CustomField>