force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Cost__c</fullName>
    <formula>IF( Core_Shell_Cost_Parameter__r.Duplicate_Maintenance_Related__c = true,( Unit_Cost__c * Total_Units__c * Core_Shell_Cost_Parameter__r.PCT__c * 100 * Project_Cost_Summary__r.Project_Name__r.Core_Shell_Adjustment_Factor__c) ,(Total_Cost__c *  Core_Shell_Cost_Parameter__r.PCT__c * Project_Cost_Summary__r.Project_Name__r.Core_Shell_Adjustment_Factor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>