force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Replacement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Frequency__c</fullName>
    <formula>Core_Shell_Cost_Parameter__r.Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>