force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Replacement_Type__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Type__c</fullName>
    <formula>text(Core_Shell_Cost_Parameter__r.Type1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Type</label>
    <type>Text</type>
</CustomField>