force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Run_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Run_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>back-end field used to control whether or not Core Shell Cost Detail workflow rules should run</description>
    <label>Run Workflow</label>
    <type>Checkbox</type>
</CustomField>