force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/TCO_Performance_Input__c.field-meta.xml
<CustomField>
    <fullName>TCO_Performance_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Performance Input</label>
    <referenceTo>NCMT_TCO_Performance_Input__c</referenceTo>
    <relationshipLabel>Core Shell Cost Detail</relationshipLabel>
    <relationshipName>Core_Shell_Cost_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>