force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/TCO_Project_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>TCO_Project_Cost_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Project Cost Rate</label>
    <referenceTo>NCMT_Project_Cost_Rate__c</referenceTo>
    <relationshipLabel>Core Shell Cost Detail</relationshipLabel>
    <relationshipName>Core_Shell_Cost_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>