force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/TCO_Unit_Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>TCO_Unit_Maintenance_Cost__c</fullName>
    <formula>if(Core_Shell_Cost_Parameter__r.Productivity__c == 0, 0,
(((Core_Shell_Cost_Parameter__r.Material_Unit_Cost__c + Core_Shell_Cost_Parameter__r.Equipment_Unit_Cost__c + Core_Shell_Cost_Parameter__r.Sub__c +  Cost_Rate_for_Space__c) *  Core_Shell_Cost_Parameter__r.Frequency__c 
))
*
(
Case(Core_Shell_Cost_Parameter__r.Core_Shell_Cost_Parameter_Identifier__c,
&quot;CC-27152&quot;, Core_Shell_Cost_Parameter__r.Productivity__c,
&quot;CC-27155&quot;, Core_Shell_Cost_Parameter__r.Productivity__c/1000,
&quot;CC-27156&quot;, Core_Shell_Cost_Parameter__r.Productivity__c/1000,
&quot;CC-27157&quot;, Core_Shell_Cost_Parameter__r.Productivity__c,
&quot;CC-27158&quot;, Core_Shell_Cost_Parameter__r.Productivity__c,
&quot;CC-27159&quot;, Core_Shell_Cost_Parameter__r.Productivity__c,
&quot;CC-27163&quot;, Core_Shell_Cost_Parameter__r.Productivity__c,
&quot;CC-27172&quot;, Core_Shell_Cost_Parameter__r.Productivity__c,
1/Core_Shell_Cost_Parameter__r.Productivity__c)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Maintenance Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>