force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>(Core_Shell_Cost__c +  ParkingCost__c) * IF(ISNULL(Applicable_Cost__c),1, Applicable_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>