force-app/main/default/objects/NCMT_Core_Shell_Cost_Detail__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>